@@ -30,6 +30,7 @@
 #include "DeferGC.h"
 #include "Handle.h"
 #include "JSCell.h"
+#include "JSDestructibleObject.h"
 #include "JSObject.h"
 #include "JSString.h"
 #include "Structure.h"
@@ -229,6 +230,14 @@ inline bool JSCell::canUseFastGetOwnProperty(const Structure& structure)
     return !structure.hasGetterSetterProperties() 
         && !structure.hasCustomGetterSetterProperties()
         && !structure.typeInfo().overridesGetOwnPropertySlot();
+}
+
+inline const ClassInfo* JSCell::classInfo() const
+{
+    MarkedBlock* block = MarkedBlock::blockFor(this);
+    if (block->destructorType() == MarkedBlock::Normal)
+        return static_cast<const JSDestructibleObject*>(this)->classInfo();
+    return structure(*block->vm())->classInfo();
 }
 
 inline bool JSCell::toBoolean(ExecState* exec) const
