@@ -29,14 +29,6 @@ private:
     const ClassInfo* m_classInfo;
 };
 
-inline const ClassInfo* JSCell::classInfo() const
-{
-    MarkedBlock* block = MarkedBlock::blockFor(this);
-    if (block->destructorType() == MarkedBlock::Normal)
-        return static_cast<const JSDestructibleObject*>(this)->classInfo();
-    return structure(*block->vm())->classInfo();
-}
-
 } // namespace JSC
 
 #endif
